--- a/Application/Erp/View/Finance/cashflow.html
+++ b/Application/Erp/View/Finance/cashflow.html
@@ -62,7 +62,7 @@
 										<if condition="$vo.status == 1">实际下单价大于发布价，扣除差价</if>
 									</eq>
 									<eq name="vo.msg" value="9">空包补偿费用</eq>
-
+									<eq name="vo.msg" value="10">系统余额校正</eq>
 								</td>
 							</tr>
 						</volist>
