--- a/Application/Erp/View/Business/shopcheck.html
+++ b/Application/Erp/View/Business/shopcheck.html
@@ -23,9 +23,9 @@
 						<thead>
 							<tr class="text-c">
 								<th>店铺名称</th>
-								<th>旺旺</th>
-								<th>商家名称</th>
-								<th>店铺网址</th>
+								<th>店铺旺旺</th>
+								<th>所属商家</th>
+								<th>所属导师</th>
 								<th>状态</th>
 								<th width="100">操作</th>
 							</tr>
@@ -33,10 +33,10 @@
 						<tbody>
 							<volist name="data" id="info">
 							<tr class="text-c">
-								<td>{$info.shopname}</td>
+								<td><a href="{$info.url}" title="点击查看" target="_blank">{$info.shopname}</a></td>
 								<td>{$info.wangwang}</td>
 								<td>{$info.b_shopname}</td>
-								<td><a href="{$info.url}" title="点击查看" target="_blank">点击查看</a></td>
+								<td>{$info.info}</td>
 								<td>
 									<if condition="$info.status eq 2"><span class="label label-success radius">已审核</span></if>
 									<if condition="$info.status eq 0"><span class="label label-warning radius">待审核</span></if>
