--- a/Application/Erp/View/Product/orderdetail.html
+++ b/Application/Erp/View/Product/orderdetail.html
@@ -51,7 +51,7 @@
 					<span class="l" style="margin-top: 5px;">
 					<if condition="$_SESSION['user']['role'] == 5">
 						<a class="btn btn-primary radius" href="javascript:;" onclick="isAdd()"><i class="Hui-iconfont">&#xe600;</i> 发布任务</a></if>
-					<a class="btn btn-success radius" onclick="" href="{:U('Product/down_excel')}&time={$starttime}&endtime={$endtime}&ordernum={$ordernum}&wangwang={$wangwang}&shopname={$shopname}&type={$Think.get.type}&choicezz={$Think.get.choicezz}&choiceyw={$Think.get.choiceyw}"><i class="Hui-iconfont">&#xe644;</i> 下载EXECL</a>
+					<a class="btn btn-success radius" onclick="" href="{:U('Product/down_excel')}&time={$starttime}&endtime={$endtime}&ordernum={$ordernum}&wangwang={$wangwang}&shopname={$shopname}&sjname={$sjname}&type={$Think.get.type}&choicepr={$choicepr}&choicezz={$Think.get.choicezz}&choiceyw={$Think.get.choiceyw}"><i class="Hui-iconfont">&#xe644;</i> 下载EXECL</a>
 					</span>
 					<div class="r" style="font-size: 12px;">
 						<table class="table table-border table-bordered">
