--- a/Application/Erp/View/Product/mytask.html
+++ b/Application/Erp/View/Product/mytask.html
@@ -255,7 +255,7 @@
 	    var role ="{$_SESSION['user']['role']}",type;
 	    if(role == 5 ){
 	        type = 1;
-		}else if(role == 6){
+		}else if(role == 6 || role == 1){	// 加上1的判断，否则超级管理员没权限操作
 	        type = 2;
 		}
 		layer.confirm('确定下架吗？', {
