--- a/Application/Erp/View/Product/refundorder.html
+++ b/Application/Erp/View/Product/refundorder.html
@@ -33,7 +33,7 @@
 							</select>
 
 						</if>
-						<input type="text" class="input-text ordernum" style="width:150px" placeholder="店铺名搜索" id="" name="shopname" value="{$shopname}">
+						<input type="text" class="input-text ordernum" style="width:150px" placeholder="商家搜索" id="" name="sjname" value="{$sjname}">
 						<input type="text" class="input-text ordernum" style="width:150px" placeholder="订单号搜索" id="" name="ordernum" value="{$ordernum}">
 						<input type="text" class="input-text wangwang" style="width:150px" placeholder="旺旺号搜索" id="" name="wangwang" value="{$wangwang}">
 						<button type="submit" class="btn btn-success"><i class="Hui-iconfont">&#xe665;</i> 搜索</button>
